# finance_gui

./: .gitignore  Cargo.toml  work.code-workspace
src/: component.rs  component2.rs  datamodel.rs  ewidget.rs  gui.rs  main.rs  plaid.rs  xml_parse.rs  xml_test.rs
